// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover renders with caret hidden 1`] = `
Array [
  .c0 {
  max-width: 200px;
}

<div
    className="c0"
  >
    <button>
      click me
    </button>
  </div>,
  .c0 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  border-radius: 3px;
  max-width: 200px;
  min-height: 3rem;
  z-index: 1002;
  background-color: #024A8F;
  color: #FFFFFF;
  padding: 1rem;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

<div
    className="c0"
    data-placement="top"
  >
    <div>
      This is a popover
    </div>
  </div>,
]
`;

exports[`Popover renders with placement bottom 1`] = `
Array [
  .c0 {
  max-width: 200px;
}

<div
    className="c0"
  >
    <button>
      click me
    </button>
  </div>,
  .c0 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  border-radius: 3px;
  max-width: 200px;
  min-height: 3rem;
  z-index: 1002;
  background-color: #024A8F;
  color: #FFFFFF;
  padding: 1rem;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  position: absolute;
}

.c1::before {
  position: absolute;
  content: '';
  display: inline-block;
  width: 0;
  height: 0;
}

.c1[data-placement*='top'] {
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-bottom: -0.9rem;
}

.c1[data-placement*='top']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-top: 0.5rem solid #024A8F;
}

.c1[data-placement*='bottom'] {
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-top: -0.4rem;
}

.c1[data-placement*='bottom']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-bottom: 0.5rem solid #024A8F;
}

.c1[data-placement*='right'] {
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-left: -0.4rem;
}

.c1[data-placement*='right']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-right: 0.5rem solid #024A8F;
}

.c1[data-placement*='left'] {
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-right: 0.1rem;
}

.c1[data-placement*='left']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-left: 0.5rem solid #024A8F;
}

<div
    className="c0"
    data-placement="bottom"
  >
    <div>
      This is a popover
    </div>
    <div
      className="c1"
      data-placement="bottom"
    />
  </div>,
]
`;

exports[`Popover renders with placement left 1`] = `
Array [
  .c0 {
  max-width: 200px;
}

<div
    className="c0"
  >
    <button>
      click me
    </button>
  </div>,
  .c0 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  border-radius: 3px;
  max-width: 200px;
  min-height: 3rem;
  z-index: 1002;
  background-color: #024A8F;
  color: #FFFFFF;
  padding: 1rem;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  position: absolute;
}

.c1::before {
  position: absolute;
  content: '';
  display: inline-block;
  width: 0;
  height: 0;
}

.c1[data-placement*='top'] {
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-bottom: -0.9rem;
}

.c1[data-placement*='top']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-top: 0.5rem solid #024A8F;
}

.c1[data-placement*='bottom'] {
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-top: -0.4rem;
}

.c1[data-placement*='bottom']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-bottom: 0.5rem solid #024A8F;
}

.c1[data-placement*='right'] {
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-left: -0.4rem;
}

.c1[data-placement*='right']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-right: 0.5rem solid #024A8F;
}

.c1[data-placement*='left'] {
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-right: 0.1rem;
}

.c1[data-placement*='left']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-left: 0.5rem solid #024A8F;
}

<div
    className="c0"
    data-placement="left"
  >
    <div>
      This is a popover
    </div>
    <div
      className="c1"
      data-placement="left"
    />
  </div>,
]
`;

exports[`Popover renders with placement right 1`] = `
Array [
  .c0 {
  max-width: 200px;
}

<div
    className="c0"
  >
    <button>
      click me
    </button>
  </div>,
  .c0 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  border-radius: 3px;
  max-width: 200px;
  min-height: 3rem;
  z-index: 1002;
  background-color: #024A8F;
  color: #FFFFFF;
  padding: 1rem;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  position: absolute;
}

.c1::before {
  position: absolute;
  content: '';
  display: inline-block;
  width: 0;
  height: 0;
}

.c1[data-placement*='top'] {
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-bottom: -0.9rem;
}

.c1[data-placement*='top']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-top: 0.5rem solid #024A8F;
}

.c1[data-placement*='bottom'] {
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-top: -0.4rem;
}

.c1[data-placement*='bottom']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-bottom: 0.5rem solid #024A8F;
}

.c1[data-placement*='right'] {
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-left: -0.4rem;
}

.c1[data-placement*='right']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-right: 0.5rem solid #024A8F;
}

.c1[data-placement*='left'] {
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-right: 0.1rem;
}

.c1[data-placement*='left']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-left: 0.5rem solid #024A8F;
}

<div
    className="c0"
    data-placement="right"
  >
    <div>
      This is a popover
    </div>
    <div
      className="c1"
      data-placement="right"
    />
  </div>,
]
`;

exports[`Popover renders with placement top 1`] = `
Array [
  .c0 {
  max-width: 200px;
}

<div
    className="c0"
  >
    <button>
      click me
    </button>
  </div>,
  .c0 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  border-radius: 3px;
  max-width: 200px;
  min-height: 3rem;
  z-index: 1002;
  background-color: #024A8F;
  color: #FFFFFF;
  padding: 1rem;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  position: absolute;
}

.c1::before {
  position: absolute;
  content: '';
  display: inline-block;
  width: 0;
  height: 0;
}

.c1[data-placement*='top'] {
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-bottom: -0.9rem;
}

.c1[data-placement*='top']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-top: 0.5rem solid #024A8F;
}

.c1[data-placement*='bottom'] {
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-top: -0.4rem;
}

.c1[data-placement*='bottom']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-bottom: 0.5rem solid #024A8F;
}

.c1[data-placement*='right'] {
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-left: -0.4rem;
}

.c1[data-placement*='right']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-right: 0.5rem solid #024A8F;
}

.c1[data-placement*='left'] {
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-right: 0.1rem;
}

.c1[data-placement*='left']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-left: 0.5rem solid #024A8F;
}

<div
    className="c0"
    data-placement="top"
  >
    <div>
      This is a popover
    </div>
    <div
      className="c1"
      data-placement="top"
    />
  </div>,
]
`;

exports[`Popover renders with secondary theme 1`] = `
Array [
  .c0 {
  max-width: 200px;
}

<div
    className="c0"
  >
    <button>
      click me
    </button>
  </div>,
  .c0 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  border-radius: 3px;
  max-width: 200px;
  min-height: 3rem;
  z-index: 1002;
  background-color: #EEEEEE;
  color: #024A8F;
  padding: 1rem;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  position: absolute;
}

.c1::before {
  position: absolute;
  content: '';
  display: inline-block;
  width: 0;
  height: 0;
}

.c1[data-placement*='top'] {
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-bottom: -0.9rem;
}

.c1[data-placement*='top']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-top: 0.5rem solid #EEEEEE;
}

.c1[data-placement*='bottom'] {
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-top: -0.4rem;
}

.c1[data-placement*='bottom']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-bottom: 0.5rem solid #EEEEEE;
}

.c1[data-placement*='right'] {
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-left: -0.4rem;
}

.c1[data-placement*='right']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-right: 0.5rem solid #EEEEEE;
}

.c1[data-placement*='left'] {
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-right: 0.1rem;
}

.c1[data-placement*='left']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-left: 0.5rem solid #EEEEEE;
}

<div
    className="c0"
    data-placement="top"
  >
    <div>
      This is a popover
    </div>
    <div
      className="c1"
      data-placement="top"
    />
  </div>,
]
`;

exports[`Popover renders with text align right 1`] = `
Array [
  .c0 {
  max-width: 200px;
}

<div
    className="c0"
  >
    <button>
      click me
    </button>
  </div>,
  .c0 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  border-radius: 3px;
  max-width: 200px;
  min-height: 3rem;
  z-index: 1002;
  background-color: #024A8F;
  color: #FFFFFF;
  padding: 1rem;
  -webkit-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
}

.c1 {
  position: absolute;
}

.c1::before {
  position: absolute;
  content: '';
  display: inline-block;
  width: 0;
  height: 0;
}

.c1[data-placement*='top'] {
  bottom: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-bottom: -0.9rem;
}

.c1[data-placement*='top']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-top: 0.5rem solid #024A8F;
}

.c1[data-placement*='bottom'] {
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  height: 1rem;
  margin-top: -0.4rem;
}

.c1[data-placement*='bottom']::before {
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-bottom: 0.5rem solid #024A8F;
}

.c1[data-placement*='right'] {
  left: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-left: -0.4rem;
}

.c1[data-placement*='right']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-right: 0.5rem solid #024A8F;
}

.c1[data-placement*='left'] {
  right: 0;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 1rem;
  margin-right: 0.1rem;
}

.c1[data-placement*='left']::before {
  border-top: 0.5rem solid transparent;
  border-bottom: 0.5rem solid transparent;
  border-left: 0.5rem solid #024A8F;
}

<div
    className="c0"
    data-placement="top"
  >
    <div>
      This is a popover
    </div>
    <div
      className="c1"
      data-placement="top"
    />
  </div>,
]
`;
